--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Navbar</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="qurries.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/qurries.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -59,10 +59,10 @@
           <!-- Left Side: Image -->
           <div class="col-md-6 position-relative hero-left">
             <img src="img/hero-img.png" alt="Recycling Points" class="img-fluid fade-in-animation">
-
+            <!-- Floating Objects -->
             <div class="header-content fade-right-animation rounded-border">
-              <h2 class="hero-title">Pick up points for recycling and learning online</h2>
-              <h6 class="hero-subtitle"> Like a frequent flyer program, the more you do it, the more you'll earn. </h6>
+              <h2 class="hero-title">Pick up points for recycling and your time</h2>
+              <h6 class="hero-subtitle">Experience like a frequent flyer program, the more you do it, the more you'll earn. </h6>
               <a href="contact.html" class="btn start-btn"> Get Started <i class="fa fa-arrow-right"></i>
               </a>
             </div>
@@ -108,6 +108,15 @@
         <div class="row" id="accept-id">
           <!-- Left Column -->
           <div class="col-lg-4 col-md-6 items-accepted-A">
+
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="img/PLASTICS.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
          
               <div class="item-card">
                 <h3>Plastic</h3>
@@ -264,9 +273,6 @@
             <div class="your-action">
               <!-- Main Image -->
               <img src="img/action.jpg" alt="Your Reward" class="main-image">
-              <!-- shapes -->
-              <img class="top-right" src="img/svg-green.png" alt="">
-              <img class="bottom-left" src="img/svg-shape.png" alt="">
             </div>
           </div>
         </div>
@@ -489,7 +495,7 @@
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     <!-- Link your JS file -->
   </body>
 </html>
